# SearchSystem

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
backend/parser/: AuParse.py  AvitoParse.py  BaseParser.py  YoulaParse.py  items.json  locator.py
parser/: admin.py  forms.py  models.py  urls.py  views.py
parser/migrations/: 0001_initial.py
parser/services/: AuParser.py  AvitoParser.py  BaseParser.py  YoulaParser.py  run_parser.py
parser/templates/parser/: search.html
search_results/: au24_results.json  avito_results.json  youla_results.json
search_system/: asgi.py  settings.py  urls.py  wsgi.py
