[project]
name = "searchsystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Sonya Sergeeva",email = "sonya451f@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (==4.27.1)",
    "requests (==2.32.3)",
    "undetected-chromedriver (==3.5.5)",
    "attrs (==24.3.0)",
    "certifi (==2024.12.14)",
    "charset-normalizer (==3.4.1)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "outcome (==1.3.0.post0)",
    "pysocks (==1.7.1)",
    "setuptools (==75.8.0)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "trio (==0.28.0)",
    "trio-websocket (==0.11.1)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "websocket-client (==1.8.0)",
    "websockets (==14.1)",
    "wsproto (==1.2.0)",
    "django (>=5.1.7,<6.0.0)",
    "fake-useragent (>=2.1.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pyright = "^1.1.396"
